--- a/catus/templates/adoption/card.html
+++ b/catus/templates/adoption/card.html
@@ -71,7 +71,7 @@
       <div class="animal-description-container">
         <span class="animal-desciption show-more-text">{% if animal.datos %}{{animal.get_datos|safe}}{% else %}No hay descripción disponible{% endif %}</span>
         <div>
-          <a class="show-more-a" href="javascript:" onclick="showMore(this)">Mostrar más...</a>
+          <a class="show-more-a" href="javascript:" onclick="showMore(this)">Mostrar más</a>
         </div>
       </div>
     </div>
