--- a/catus/templates/registration/password_reset_form.html
+++ b/catus/templates/registration/password_reset_form.html
@@ -3,26 +3,34 @@
 
 {% block login_content %}
 
-<form action="" method="post">
+<form id="login-form" class="form" action="" method="post">
     {% csrf_token %}
 
-    <h3 class="text-center text-primary">Resetear Contraseña</h3>
+    <h3 class="text-center">Resetear Contraseña</h3>
+    <p class="text-center text-muted mb-4">Te enviaremos un enlace para crear una nueva contraseña</p>
 
-    {% if form.email.errors %} {{ form.email.errors }} {% endif %}
+    {% if form.email.errors %}
+        <div class="alert alert-danger">
+            {{ form.email.errors }}
+        </div>
+    {% endif %}
+
     {{ form|crispy }}
 
-    <div class="form-group">
-        <input type="submit" class="btn btn-primary btn-md" value="Resetear Contraseña" />
+    <div class="form-group mt-4 mb-3">
+        <button type="submit" class="btn btn-primary btn-block">
+            <i class="fas fa-key mr-2"></i> Resetear Contraseña
+        </button>
     </div>
-</form>
 
-<div class="form-group">
-    <hr>
-    <div id="register-link" class="text-right">
-        <div class="my-2">
-            <a href="#" onclick="history.back()" class="text-primary">Volver</a>
+    <div class="form-group">
+        <hr>
+        <div class="d-flex justify-content-center mt-3">
+            <a href="#" onclick="history.back()">
+                <i class="fas fa-arrow-left mr-2"></i> Volver
+            </a>
         </div>
     </div>
-</div>
+</form>
 
 {% endblock %}
