--- a/catus/templates/home/index.html
+++ b/catus/templates/home/index.html
@@ -99,6 +99,36 @@
 
 {% block css %}
 <style>
+  /* Background del banner completamente opaco */
+  .masthead.header-main-page {
+    position: relative;
+    background-color: rgb(70, 20, 120, 0.5) !important;
+  }
+
+  .masthead.header-main-page:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(70, 20, 120) !important;
+    opacity: 0.98 !important;
+    z-index: 1;
+  }
+
+  /* Mejorar visibilidad del texto con sombras pronunciadas */
+  .site-heading {
+    position: relative;
+    z-index: 5;
+    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.6) !important;
+  }
+
+  /* Eliminar el cuadrado violeta anterior */
+  .site-heading:before {
+    display: none;
+  }
+
   .animated-heading h1,
   .animated-heading .subheading,
   .animated-heading #main-button {
