--- a/catus/templates/registration/password_reset_confirm.html
+++ b/catus/templates/registration/password_reset_confirm.html
@@ -3,29 +3,32 @@
 
 {% block login_content %}
 
-<div class="mx-5">
-    <div class="col-md-12">
-
-    {% if validlink %}
-
-        <h3 class="text-center text-primary">Por favor ingresá tu nueva contraseña.</h3>
+{% if validlink %}
+    <div id="login-form">
+        <h3 class="text-center">Nueva contraseña</h3>
+        <p class="text-center text-muted mb-4">Por favor ingresá tu nueva contraseña</p>
 
         <form action="" method="post" class="form">
-
             <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
 
             {{ form.new_password1|as_crispy_field }}
-
             {{ form.new_password2|as_crispy_field }}
 
-            <div class="form-group">
-                <input class="btn btn-primary" type="submit" value="Actualizar contraseña" />
+            <div class="form-group mt-4 mb-3">
+                <button type="submit" class="btn btn-primary btn-block">
+                    <i class="fas fa-check-circle mr-2"></i> Actualizar contraseña
+                </button>
             </div>
         </form>
-    {% else %}
-        <p class="alert alert-danger text-center">El link de reseteo de contraseña es inválido o ya fue usado. Por favor intentá nuevamente.</p>
-    {% endif %}
     </div>
-</div>
+{% else %}
+    <div class="text-center">
+        <i class="fas fa-exclamation-triangle text-warning mb-3" style="font-size: 3rem;"></i>
+        <p class="alert alert-danger">El link de reseteo de contraseña es inválido o ya fue usado. Por favor intentá nuevamente.</p>
+        <a href="{% url 'password_reset' %}" class="btn btn-outline-primary mt-3">
+            <i class="fas fa-sync mr-2"></i> Solicitar nuevo link
+        </a>
+    </div>
+{% endif %}
 
 {% endblock %}
