--- a/catus/templates/registration/register.html
+++ b/catus/templates/registration/register.html
@@ -8,27 +8,29 @@
 <form id="login-form" class="form" action="" method="post">
 {% csrf_token %}
 
-    <h3 class="text-center text-primary">{% trans "Creá tu cuenta para cargar un animal" %}</h3>
+    <h3 class="text-center">{% trans "Creá tu cuenta" %}</h3>
+    <p class="text-center text-muted mb-4">Para cargar un animal en adopción</p>
 
-    <hr>
-    <div class="alert alert-info">Al email que ingreses acá te van a llegar los <b>formularios de pre-adopción</b> que completen los candidatos.</div>
-    <hr>
+    <div class="alert alert-info mb-4">
+        <i class="fas fa-info-circle mr-2"></i> Al email que ingreses acá te van a llegar los <b>formularios de pre-adopción</b> que completen los candidatos.
+    </div>
 
     {{ form.email|as_crispy_field }}
     {{ form.instagram|as_crispy_field }}
     {{ form.password1|as_crispy_field }}
     {{ form.password2|as_crispy_field }}
 
-    <div class="form-group">
-        <input type="submit" name="submit" class="btn btn-primary btn-md" value="{% trans 'Crear Cuenta' %}">
+    <div class="form-group mt-4 mb-3">
+        <button type="submit" name="submit" class="btn btn-primary btn-block">
+            <i class="fas fa-user-plus mr-2"></i> {% trans 'Crear Cuenta' %}
+        </button>
     </div>
 
     <div class="form-group">
-    <hr>
-
-    <div id="register-link" class="text-right">
-        {% trans "¿Ya tenés cuenta?" %} <a href="{% url 'login' %}" class="text-primary"> {% trans "Ingresá aquí" %}</a>
-    </div>
+        <hr>
+        <div class="d-flex justify-content-center mt-3">
+            {% trans "¿Ya tenés cuenta?" %} <a href="{% url 'login' %}" class="ml-2"> {% trans "Ingresá aquí" %}</a>
+        </div>
     </div>
 </form>
 
